2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
	* gumps/VideoOptions_gump.*: implemented part of the Video Options
	  in-game menu. Still lacking gamma sliders
	* data/*.shp: shapes needed for the above

2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
	* gumps/Slider_gump.cc: allow clicking on scroller area to quickly
	  move to the desired position

2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
	* bggame.cc: worked on getting correct timing of Guardian in intro.
	  It should work at all resolutions/scaling factors.
	* gamewin.cc: made plasma 8 times faster

2001-07-09  Jeff Freedman  <jeff@amy.nerble.net>

	* gamerend.cc: Show chunk outlines when in map-editor mode.

2001-07-08  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Recoded write_map().

2001-07-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* chunkter.cc: check for NULL shape before drawing flat. (for FoV)

2001-07-07  Max Horn  <max@quendi.de>
	* files/listfiles.cc: finished up mac implementation of file lister
	* gumps/Newfile_gump.cc: removed old junk
	* gamewin.cc: added using std::ios

2001-07-07  Jeff Freedman  <jeff@amy.nerble.net>
	* Chunkter.{cc,h}: First use of Chunk_terrain seems to work.

2001-07-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* ibuf8.cc, Makefile.am: include utils.h

2001-07-06  Ryan Nunn <triforce@merlin.net.au>
	* cheat.cc, exult.cc, menulist.cc, gumps/gump_utils.cc: Fixed all
	  problems with scale factors other 2.
	* exult.cc, imagewin/imagewin.cc, imagewin/imagewin.h: Only repaint the
	  entire screen when doing palette cylcing and scaling if a palette isn't
	  being used.
	* imagewin/ibuf8.cc, imagewin/ibuf8.h, shapes/vgafile.cc: Improved RLE
	  drawing code. Almost completely rewrote paint_rle(), and moved it to
	  Image_buffer8
	* imagewin/scale.cc, imagewin/scale.h: Slightly improved Point and 
	  Interlaced scalers.
	* msvcstuff/msvc_kludges.h: Tweak

2001-07-06  Tristan Tarrant <nadir@users.sourceforge.net>