@@ -1,4 +1,8 @@
 2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
+	* gumps/Slider_gump.cc: handle left/right arrows (as suggested on IRC
+	  by Dominus)
+
+2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
 	* gumps/VideoOptions_gump.*: implemented part of the Video Options
 	  in-game menu. Still lacking gamma sliders
 	* data/*.shp: shapes needed for the above
